--- a/src/less/theme/copyright.less
+++ b/src/less/theme/copyright.less
@@ -8,7 +8,7 @@
     line-height: @copyrightHeight;
     //.bg-gradient(lighten(#eee, 5%), darken(#eee, 5%));
     background-color: white;
-    z-index: 5;
+    //z-index: 5;
     font-size: 14px;
     -webkit-transition: left .2s;
     transition: left .2s;
