--- a/src/less/theme/sidebar.less
+++ b/src/less/theme/sidebar.less
@@ -1,3 +1,4 @@
+@sidebar-bdColor:#262626;
 //侧边栏
 .sidebar {
     z-index:5;
@@ -9,6 +10,14 @@
         .display-flex.flex-column;
         overflow: hidden;
     }
+    .logo{
+        //height: 32px;
+        background: #000c17;
+        img{
+
+        }
+        padding: 16px;
+    }
 
     .menu-wrapper{
         overflow-y: scroll;
@@ -16,91 +25,112 @@
         .flex-grow-1;
 
         margin-right:-10px;
+        background: #000c17;
 
-        .ant-menu-inline{
-            border-right:none;
-            height:100%;
+        .ant-menu-dark {
+            background: #000c17;
         }
 
-        .ant-menu-item,.ant-menu-submenu-title{
-            font-size: 15px;
-            margin: 0;
-            font-weight: bold;
-        }
-
-        .ant-menu-submenu-title{
-            //.bg-gradient(#fbfbfb, #f4f4f4);
-            .bg-gradient(#f4f4f4, #f4f4f4);
-            //background-color:#d9d9d9';
-            border-bottom:1px solid #e5e5e5;
-        }
-
-        .ant-menu-item{
-            //border-bottom:1px dashed #ddd;
-        }
-
-        .ant-menu-item-active{
-            background: @primary-1;
-        }
+        //.ant-menu-inline{
+        //    border-right:none;
+        //    height:100%;
+        //}
+        //
+        //.ant-menu-item,.ant-menu-submenu-title{
+        //    font-size: 15px;
+        //    margin: 0;
+        //    font-weight: bold;
+        //}
+        //
+        //.ant-menu-submenu-title{
+        //    //.bg-gradient(#fbfbfb, #f4f4f4);
+        //    //.bg-gradient(#f4f4f4, #f4f4f4);
+        //    //.bg-gradient(#262626, #262626);
+        //    background-color:@sidebar-bdColor;
+        //    //border-bottom:1px solid #e5e5e5;
+        //    border-bottom:1px solid @sidebar-bdColor;
+        //
+        //}
+        //
+        //.ant-menu-item{
+        //    //border-bottom:1px dashed #ddd;
+        //    background: @sidebar-bdColor;
+        //
+        //}
+        //
+        //.ant-menu-item-active{
+        //    //background: @primary-1;
+        //    background: #1890ff;
+        //    span{
+        //        color:#ffffff
+        //    }
+        //}
     }
 
     .ant-layout-sider-trigger{
-        .bg-gradient(lighten(#eee, 5%), darken(#eee, 5%));
+        .bg-gradient(lighten(#000c17, 5%), darken(#000c17, 5%));
+        //background: #000c17;
         .layout-shadow;
-    }
-}
-
-.sidebar-info{
-    padding:22px 5px;
-    //color: white;
-    color:black;
-    //background: @primary-7;
-    background: white;
-    border-bottom: 1px solid #eee;
-
-    .hd{
-        display: table-cell;
-        vertical-align: center;
-
-        .ant-avatar{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width:72px;
-            height:72px;
-            border-radius: 50%;
-            //.shadow;
-        }
-    }
-
-    .bd{
-        display: table-cell;
-        padding-left:16px;
-        vertical-align: middle;
-
-        ul{
-            margin-left:-4px;
-
-            li{
-                float: left;
-
-                a{
-                    //color: white;
-                    color:rgba(0, 0, 0, 0.85);
-                    width: 24px;
-                    text-align: center;
-                    display: inline-block;
-                    margin-right: 3px;
-                }
-            }
+        i{
+            color:white
         }
     }
 }
 
-.sidebar-date{
-    height:60px;
-    min-height:60px;
-    text-align: right;
-    padding:8px 16px;
-    background: @primary-2;
-}
+//.sidebar-info{
+//    padding:22px 5px;
+//    //color: white;
+//    color:black;
+//    //background: @primary-7;
+//    //background: white;
+//    background: #262626;
+//    //border-bottom: 1px solid #eee;
+//    border-bottom: 1px solid #262626;
+//
+//
+//    .hd{
+//        display: table-cell;
+//        vertical-align: center;
+//
+//        .ant-avatar{
+//            display: flex;
+//            align-items: center;
+//            justify-content: center;
+//            width:72px;
+//            height:72px;
+//            border-radius: 50%;
+//            //.shadow;
+//        }
+//    }
+//
+//    .bd{
+//        display: table-cell;
+//        padding-left:16px;
+//        vertical-align: middle;
+//
+//        ul{
+//            margin-left:-4px;
+//
+//            li{
+//                float: left;
+//
+//                a{
+//                    //color: white;
+//                    color:rgba(0, 0, 0, 0.85);
+//                    width: 24px;
+//                    text-align: center;
+//                    display: inline-block;
+//                    margin-right: 3px;
+//                }
+//            }
+//        }
+//    }
+//}
+//
+//.sidebar-date{
+//    height:60px;
+//    min-height:60px;
+//    text-align: right;
+//    padding:8px 16px;
+//    background: @primary-2;
+//}
