--- a/src/less/theme/topbar.less
+++ b/src/less/theme/topbar.less
@@ -5,6 +5,11 @@
   background-color: white;
 }
 
+.ant-layout-header{
+    height:50px !important;
+    line-height: 50px !important;
+}
+
 //顶部栏
 .topbar {
     //-webkit-box-shadow: 0 2px 6px rgba(0,21,41,.35);
@@ -17,6 +22,29 @@
     color: @topbarColor;
     display: flex;
     justify-content: space-between;
+
+    .ant-dropdown-menu-item-group-list{
+        list-style: none;
+        padding-left: 0;
+    }
+    .header-ul{
+        display: flex;
+        width: 200px;
+        list-style: none;
+    }
+    .header-ul li {
+        flex-grow: 1;
+        text-align: center;
+    }
+    .menu{
+        line-height: 2em;
+        padding: 0 10px;
+    }
+    .menu-group li{
+        padding: 0 24px;
+        line-height: 2em;
+    }
+
     .header-left{
         padding: 0 20px;
         b{
@@ -28,9 +56,7 @@
         display: flex;
         justify-content: flex-end;
         align-items: center;
-        .header-tools{
 
-        }
     }
 
     &.ant-layout-header{
