--- a/src/less/role.less
+++ b/src/less/role.less
@@ -1,5 +1,10 @@
 @leftWidth:200px;
 
+.page-component{
+  background: #fff;
+  padding: 20px 10px;
+}
+
 .role-left{
   width: @leftWidth;
   float: left;
