--- a/src/less/theme/page-tabs.less
+++ b/src/less/theme/page-tabs.less
@@ -39,7 +39,7 @@
             -webkit-flex-grow: 1;
             flex-grow: 1;
             overflow: auto;
-            padding:10px;
+            padding:10px 20px;
             position: relative;
         }
     }
